# VisualTester

./: CMakeLists(Example for merge).txt  CMakeLists.txt  Documentation.txt  appconnection.cpp  appconnection.h  formregistry.cpp  formregistry.h  formsForTest.h  main.cpp  main.cpp.autosave  visualtester.cpp  visualtester.h  visualtester_includes.h
